Find command options

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+v0.1.3 - Logs 
+    - Commit: 
+    - Add Logs for sending/receiving 
+    - View logs
+    - Rename destination path if file exists (suffix _N)
+    - Send auto option (autosend if 1)
+
 v0.1.2 - Feature Updates 
     - Commit: 
     x Set defaultTimeout to 3s
@@ -5,14 +12,10 @@ v0.1.2 - Feature Updates
     x Update README Usage
     x Transfer command implementations to internal package 
     x Improve help command
-    - Find options (name, ip)
+    x Find options (name, ip)
     - Open accept option (auto, default: ask)
         - In Receiving files, prompt Accept? Y/N if accept=ask 
         - Send rejection message if not accepted
-    - Rename destination path if file exists (suffix _N)
-    - Send auto option (autosend if 1)
-    - Add Logs for sending/receiving 
-    - View logs
     - Update command 
 v0.1.1 - Hand-Coded Dali    
     x Commit: 2026-01-16 11:21
