--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,6 @@ v0.1.3 - Logs
     - View logs
     - Rename destination path if file exists (suffix _N)
     - Send auto option (autosend if 1)
-
 v0.1.2 - Feature Updates 
     - Commit: 
     x Set defaultTimeout to 3s
@@ -13,9 +12,9 @@ v0.1.2 - Feature Updates
     x Transfer command implementations to internal package 
     x Improve help command
     x Find options (name, ip)
-    - Open accept option (auto, default: ask)
-        - In Receiving files, prompt Accept? Y/N if accept=ask 
-        - Send rejection message if not accepted
+    x Open auto-accept
+        x In Receiving files, prompt confirmation
+        x Send rejection message if not accepted
     - Update command 
 v0.1.1 - Hand-Coded Dali    
     x Commit: 2026-01-16 11:21
