--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,9 +3,9 @@ v0.1.3 - Event Logging
     x Add Logs for sending/receiving 
     x Prompt name and timeout on first use (no ~/.dali file yet)
     x Filesize string (Kb, Mb instead of bytes)
-    - Rename destination path if file exists (suffix _N)
+    x Rename destination path if file exists (suffix _N)
     - Send auto option (autosend if 1)
-    - Check if can prioIP based on profile (e.g. LAN, WiFi)
+    - Check if can prio IP based on profile (e.g. LAN, WiFi)
     - View logs
     - Log filters (action, date, from, to, file regexp)
 v0.1.2 - Feature Updates 
