--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,15 +1,11 @@
 TODO
-- Network Select 
-    - Check if can prio IP based on profile (e.g. LAN, WiFi)
-        - Fix: what if machine has multiple IPv4 address
-    - Test find command on 2 active network profiles
 - Make GUI 
     - Create background process for listening
     - Allow viewing of shared folder in network 
     - Allow fetching of file in shared folder
 - Test scenarios:
     - 2 senders for 1 receiver, at the same time
-    -  1 shared folder, multiple downloaders at same time
+    - 1 shared folder, multiple downloaders at same time
 ##################################################################
 v0.1.3 - Event Logging 
     - Commit: 
@@ -23,6 +19,7 @@ v0.1.3 - Event Logging
     x Save absolute file path in logs
     x Log filters (action, date, from, to, file regexp)
     x Select network if multiple IP address
+    x Add network interface name (Wi-Fi, Ethernet)
     - Finish early in detection if search param found
 v0.1.2 - Feature Updates 
     x Commit: 2026-01-16 16:35
