--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,12 @@ TODO
     - 2 senders for 1 receiver, at the same time
     - 1 shared folder, multiple downloaders at same time
 ##################################################################
+v0.1.4 - Multiple Networks 
+    - Commit: 
+    x Reset command 
+    - Update notes
+    - Fix network IP in discoverPeers, if multiple network interface
+        - Check discoverPeers and runDiscovery, replace ipZero with chosen ip?
 v0.1.3 - Event Logging 
     x Commit: 2026-01-20 16:41
     x Add Logs for sending/receiving 
